--- a/css/elzero.css
+++ b/css/elzero.css
@@ -784,4 +784,4 @@ footer .box .social {justify-content: center;}
 footer .box .line {flex-direction: column;}
 footer .box .line i {margin-right: 0;
 margin-bottom: 15px;}}
-/* end footer */
+/* end footer *//
